# fcnp-context-pruning

./: .gitignore  LICENSE  README.md  pyproject.toml  run_synthetic_e2e.py
dashboard/: .gitignore  README.md  package-lock.json  package.json
dashboard/app/: Dashboard.tsx  globals.css  layout.tsx  page.tsx
dashboard/app/api/metrics/: route.ts
dashboard/lib/: store.ts  types.ts
fcnp/: __init__.py  eval.py  metrics.py  pruner.py  report.py  types.py
fcnp/baselines/: __init__.py  base.py  fcnp_wrapper.py  llmlingua.py  retrieval.py  selective_context.py  simple.py
fcnp/datasets/: __init__.py  toolbench.py
figures/: make_figures.py
notebooks/: build_notebook.py  fcnp_toolbench_benchmark.ipynb
paper/: build_paper.py  paper.md
results/: metrics.json  results.csv  summary.md
tests/: test_baselines.py  test_eval.py  test_pruner.py
