[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fcnp"
version = "0.1.0"
description = "Flow-Based Context Network Pruning for LLM context compression"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "joyjeni"}]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
viz = ["networkx>=3.0", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fcnp*"]
